--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
   </div>
 
   <footer>
-    <p>Copyright &copy; 2019 Clear View Escapes. All rights reserved. <a href="#" class="btn btn--orange">Get in Touch</a></p>
+    <p>Copyright &copy; 2019 Noor al Masri. All rights reserved. <a href="#" class="btn btn--orange">Get in Touch</a></p>
   </footer>
 </body>
 </html>
